Update Hugging Face token

--- a/model/sentiment_analysis/training.ipynb
+++ b/model/sentiment_analysis/training.ipynb
@@ -323,7 +323,7 @@
     "from huggingface_hub import HfApi\n",
     "\n",
     "repo_name = \"lamsytan/sentiment-analysis-base-phobert\"  # Tên repo của bạn\n",
-    "token = \"\"  # Token cá nhân từ Hugging Face\n",
+    "token = \"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\"  # Token cá nhân từ Hugging Face\n",
     "\n",
     "# Tạo đối tượng API và truyền token\n",
     "api = HfApi()\n",
